[gd_scene load_steps=4 format=2]

[ext_resource path="res://Data/Sprites/tileset.png" type="Texture" id=1]
[ext_resource path="res://Entity/Scene4/Thing.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 14.0

[node name="Thing" type="RigidBody2D"]
collision_layer = 128
collision_mask = 152
input_pickable = true
mass = 50.0
gravity_scale = 2.0
contacts_reported = 7
contact_monitor = true
linear_velocity = Vector2( 100, 0 )
script = ExtResource( 2 )

[node name="Tileset" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 18
vframes = 20
frame = 133

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Clear_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Thing_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Thing_input_event"]
[connection signal="timeout" from="Clear_timer" to="." method="_on_Clear_timer_timeout"]
